--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mdx-js/react": "^3.0.0",
     "autoprefixer": "^10.4.17",
+    "bootstrap-icons": "^1.11.3",
     "clsx": "^2.1.0",
     "evantay.com": "file:",
     "postcss": "^8.4.35",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.1.1",
     "rehype-katex": "^7.0.0",
     "remark-math": "^6.0.0",
     "tailwindcss": "^3.4.1"
