--- a/package.json
+++ b/package.json
@@ -50,5 +50,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://ilgwang.github.io/blog"
+  "homepage": "http://ilgwang.github/"
 }
