--- a/package.json
+++ b/package.json
@@ -50,5 +50,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://ilgwang.github.blog.io/"
+  "homepage": "https://ilgwang.github.io/"
 }
