--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://ilgwang.github.io/"
+  "homepage": "http://ilgwang.github.io/blog",
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  }
 }
