--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://ilgwang.github.io/blog",
+  "homepage": "http://ilgwang.github.io",
   "devDependencies": {
     "gh-pages": "^6.3.0"
   }
