--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
-  environment = { GO_VERSION = "" }
-  NPM_REGISTRY = "https://registry.npmjs.org"
+  environment = { 
+    GO_VERSION = "", 
+    NPM_REGISTRY = "https://registry.npmjs.org",
+    NODE_VERSION = "20.17"
+  }
