--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,2 @@
 [build]
-  environment = { GO_VERSION = "" }
-  NPM_REGISTRY = "https://registry.npmjs.org"
+  environment = { GO_VERSION = "", NPM_REGISTRY = "https://registry.npmjs.org", YARN_VERSION = "1.22.19" }
